tests/snapshots/run_file__recursive_bind.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/recursive_bind.bend
---
λa (a 0)
