tests/snapshots/run_file__recursive_bind.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/recursive_bind.hvm
---
Lazy mode:
(Result.err 0)

Strict mode:
(Result.err 0)
