tests/snapshots/run_file__recursive_combinator.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/recursive_combinator.bend
---
0
