tests/snapshots/run_file__recursive_combinator.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/recursive_combinator.hvm
---
Lazy mode:

0

Strict mode:

0
