tests/snapshots/run_file__recursive_combinator_nested.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/recursive_combinator_nested.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/run_file/recursive_combinator_nested.bend[0m[1m :[0m
[1m- expected:[0m term
[1m- detected:[0m
[0m   4 |   _[4m[31m:[0m a-1[0m
