tests/snapshots/run_file__recursive_combinator_nested.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/recursive_combinator_nested.hvm
---
Lazy mode:

#a{8 0}

Strict mode:

#a{8 0}
