tests/snapshots/run_file__ref_resolution.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/ref_resolution.bend
---
42
