tests/snapshots/run_file__repeated_name_trucation.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/repeated_name_trucation.hvm
---
λ* λ* λ* long_name_that_truncates
